Add flask - migrate

--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -103,8 +103,7 @@
                 <tr>
                     <th>სეისმური პროფილები</th>
                     <th>სეისმური პროფილების რაოდენობა</th>
-                    <th>VS30</th>
-                    <th>VS30 ჭრილი ექსელი</th>
+                    <th>გასაშუალებული VS30</th>
                     <th>გრუნტის კატეგორია ქართული ნორმებით</th>
                     <th>გრუნტის კატეგორია საერთაშორისო ნორმებით</th>
                     <th>გეოფიზიკური კაროტაჟი</th>
