--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -47,9 +47,39 @@
                 </tbody>
             </table>
         </div>
-        <div class="card mt-2 imageProjectDiv" >
+        <!-- <div class="card mt-2 imageProjectDiv" >
             <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+        </div> -->
+
+        <!-- Carusel from Bootstrap5 -->
+
+        <div id="carouselExampleIndicators" class="carousel slide card w-100 mt-2" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner rounded">
+              <div class="carousel-item active">
+                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              </div>
+              <div class="carousel-item rounded">
+                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              </div>
+              <div class="carousel-item rounded">
+                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </div>
+
     </div>
 
     <div class="table-responsive-xxl table-bordered text-center mt-2" style="font-size: small;">
