--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -47,13 +47,10 @@
                 </tbody>
             </table>
         </div>
-        <!-- <div class="card mt-2 imageProjectDiv" >
-            <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
-        </div> -->
 
         <!-- Carusel from Bootstrap5 -->
 
-        <div id="carouselExampleIndicators" class="carousel slide card w-100 mt-2" data-bs-ride="true">
+        <div id="carouselExampleIndicators" class="carousel slide card mt-2 imageProjectDiv" data-bs-ride="true">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -64,7 +61,7 @@
                 <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
               </div>
               <div class="carousel-item rounded">
-                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+                <img id="projectImage" src="https://alphahome.ge/storage/media/image/2021-04-16/1366x768/c7cd81c0-9e91-11eb-b6d7-0913204f37fc.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
               </div>
               <div class="carousel-item rounded">
                 <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
