--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -24,7 +24,7 @@
 }
 .imageProjectDiv {
     width: 100%;
-    height: 26rem
+    height: 26rem;
 }
 @media (max-width: 992px) {
     .filterMapDiv {
