--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -50,21 +50,21 @@
 
         <!-- Carusel from Bootstrap5 -->
 
-        <div id="carouselExampleIndicators" class="carousel slide card mt-2 imageProjectDiv" data-bs-ride="true">
+        <div id="carouselExampleIndicators" class="carousel slide card mt-2" style="width: 100%;" data-bs-ride="true">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner rounded">
-              <div class="carousel-item active">
-                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              <div class="carousel-item active imageProjectDiv">
+                <img id="projectImage" src="../../static/img/alpha_well.png" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
               </div>
-              <div class="carousel-item rounded">
-                <img id="projectImage" src="https://alphahome.ge/storage/media/image/2021-04-16/1366x768/c7cd81c0-9e91-11eb-b6d7-0913204f37fc.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              <div class="carousel-item rounded imageProjectDiv">
+                <img id="projectImage" src="../../static/img/alpha_home.png" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
               </div>
-              <div class="carousel-item rounded">
-                <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+              <div class="carousel-item rounded imageProjectDiv">
+                <img id="projectImage" src="../../static/img/alphahome_pro.png" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
