--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -1,93 +1,55 @@
-{% extends "base.html" %}
+<!-- The Modal -->
+<div class="modal" id="CreateProjectModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+    
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">ახალი პროექტის დამატება</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+    
+            <!-- Modal body -->
+            <div class="modal-body">
+                <form class="row mt-2" id="addProjectForm" action="/api/projects" method="POST">
+                    <div class="mb-2">
+                        <label for="projectName"><span class="text-danger me-1">*</span>პროექტის სახელი:</label>
+                        <input type="text" class="form-control mt-2" id="projectName" name="projects_name" required>
+                    </div>
+                    <div class="mb-2">
+                        <label for="contractNumber">ხელშეკრულების ნომერი:</label>
+                        <input type="number" class="form-control mt-2" id="contractNumber" name="contract_number">
+                    </div>
+                    <div class="col">
+                        <label for="startTime"><span class="text-danger me-1">*</span>დაწყების დღე:</label>
+                        <input type="date" class="form-control mt-2" id="startTime" name="start_time" required>
+                    </div>
+                    <div class="col mb-2">
+                        <label for="endTime"><span class="text-danger me-1">*</span>დასრულების დღე:</label>
+                        <input type="date" class="form-control mt-2" id="endTime" name="end_time" required>
+                    </div>
+                    <div class="mb-2">
+                        <label for="contractor">დამკვეთი:</label>
+                        <input type="text" class="form-control mt-2" id="contractor" name="contractor">
+                    </div>
+                    <div class="col">
+                        <label for="projLatitude"><span class="text-danger me-1">*</span>განედი:</label>
+                        <input type="number" step="any" class="form-control mt-2" id="projLatitude" name="proj_latitude" required>
+                    </div>
+                    <div class="col mb-3">
+                        <label for="projLongitude"><span class="text-danger me-1">*</span>გრძედი:</label>
+                        <input type="number" step="any" class="form-control mt-2" id="projLongitude" name="proj_longitude" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="projLocation"><span class="text-danger me-1">*</span>პროექტის მდებარეობა:</label>
+                        <input type="text" class="form-control mt-2" id="projLocation" name="proj_location" required>
+                    </div>
 
-{% block title %}
-    IesData - Projects
-{% endblock %}
-
-{% block body %}
-    <div class="d-flex justify-content-center align-items-center pt-5">
-        <h2>ახალი პროექტის დამატება</h2>
+                    <div class="d-flex justify-content-center align-items-center m-2">
+                        <button type="submit" class="btn btn-primary me-2">პროექტის დამატება</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-
-    <form class="row" id="addProjectForm" action="/api/projects" method="POST">
-        <div class="form-group">
-            <label for="projectName">პროექტის სახელი:</label>
-            <input type="text" class="form-control mt-2" id="projectName" name="projects_name" required>
-        </div>
-        <div class="form-group">
-            <label for="contractNumber">ხელშეკრულების ნომერი:</label>
-            <input type="number" class="form-control mt-2" id="contractNumber" name="contract_number" required>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="startTime">დაწყების დღე:</label>
-                <input type="date" class="form-control mt-2" id="startTime" name="start_time" required>
-            </div>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="endTime">დასრულების დღე:</label>
-                <input type="date" class="form-control mt-2" id="endTime" name="end_time" required>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="contractor">დამკვეთი:</label>
-            <input type="text" class="form-control mt-2" id="contractor" name="contractor" required>
-        </div>
-        <div class="form-group">
-            <label for="projLocation">პროექტის მდებარეობა:</label>
-            <input type="text" class="form-control mt-2" id="projLocation" name="proj_location" required>
-        </div>
-        <div class="col form-group">
-            <label for="projLatitude">განედი:</label>
-            <input type="number" step="any" class="form-control mt-2" id="projLatitude" name="proj_latitude" required>
-        </div>
-        <div class="col form-group mb-3">
-            <label for="projLongitude">გრძედი:</label>
-            <input type="number" step="any" class="form-control mt-2" id="projLongitude" name="proj_longitude" required>
-        </div>
-        <div>
-            <p>მონიშნეთ თუ არი კვლევა პროექტზე:</p>
-        </div>
-        <div class="col form-group">
-            <div class="form-check">
-                <input type="hidden" name="geological_study" value="false">
-                <input class="form-check-input" type="checkbox" id="geologicalStudy" name="geological_study" value="true">
-                <label class="form-check-label" for="geologicalStudy">გეოლოგიური კვლევა</label>
-            </div>
-        </div>
-        <div class="col form-group">
-            <div class="form-check">
-                <input type="hidden" name="geophysical_study" value="false">
-                <input class="form-check-input" type="checkbox" id="geophysicalStudy" name="geophysical_study" value="true">
-                <label class="form-check-label" for="geophysicalStudy">გეოფიზიკური კვლევა</label>
-            </div>
-        </div>
-        <div class="col form-group">
-            <div class="form-check">
-                <input type="hidden" name="hazard_study" value="false">
-                <input class="form-check-input" type="checkbox" id="hazardStudy" name="hazard_study" value="true">
-                <label class="form-check-label" for="hazardStudy">საფრთხის კვლევა</label>
-            </div>
-        </div>
-        <div class="col form-group">
-            <div class="form-check">
-                <input type="hidden" name="geodetic_study" value="false">
-                <input class="form-check-input" type="checkbox" id="geodeticStudy" name="geodetic_study" value="true">
-                <label class="form-check-label" for="geodeticStudy">გეოდეზიური კვლევა</label>
-            </div>
-        </div>
-        <div class="col form-group">
-            <div class="form-check">
-                <input type="hidden" name="other_study" value="false">
-                <input class="form-check-input" type="checkbox" id="otherStudy" name="other_study" value="true">
-                <label class="form-check-label" for="otherStudy">სხვა კვლევა</label>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center align-items-center mt-5">
-            <button type="submit" class="btn btn-primary me-2">პროექტის დამატება</button>
-            <a class="btn btn-info" href="/projects">ყველა პროექტი</a>
-        </div>
-    </form>
-{% endblock %}
+</div>
