--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -17,8 +17,13 @@
         </div>
     </div>
     <ul class="list-group list-group-light">
-        <li class="list-group-item px-3 border-0"><a class="btn btn-sm btn-primary" href="/create_project">პროექტის დამატება</a></li>
+        <li class="list-group-item px-3 border-0">
+            <a type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#CreateProjectModal">პროექტის დამატება</a>
+        </li>
     </ul>
+
+    <!-- The CreateProjectModal -->
+    {% include "create_project.html" %}
     
     <div class="table-responsive-xxl text-center mt-1 mb-3" style="font-size: x-small;">
         <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
