--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -18,7 +18,7 @@
     </div>
     <ul class="list-group list-group-light">
         <li class="list-group-item px-3 border-0">
-            <a type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#CreateProjectModal">პროექტის დამატება</a>
+            <a type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#createProjectModal">პროექტის დამატება</a>
         </li>
     </ul>
 
