--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -10,7 +10,7 @@
     <div class="filterMapDiv">
         {% include "filter_project.html" %}
 
-        <div id="mapDiv" class="card mt-2">
+        <div id="mapDiv" class="card mt-1">
             <div id="map" 
                 style="width: 100%; height:100%; border: 1px solid #CCC; border-radius: 5px; margin-top:0px;">
             </div>
@@ -24,6 +24,7 @@
 
     <!-- The CreateProjectModal -->
     {% include "create_project.html" %}
+    {% include "edit_project.html" %}
     
     <div class="table-responsive-xxl text-center mt-1 mb-3" style="font-size: x-small;">
         <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
@@ -42,6 +43,7 @@
                     <th>სეისმური საშიშროების შეფასება</th>
                     <th>გეოდეზიური კვლევა</th>
                     <th>სხვა ტიპის კვლევა</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                 </tr>
