--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -11,7 +11,7 @@
     
             <!-- Modal body -->
             <div class="modal-body">
-                <form class="row mt-2" id="addProjectForm" enctype="multipart/form-data">
+                <form class="row mt-2" id="addProjectForm" enctype="multipart/form-data" onsubmit="createProjectForm(event)">
                     <div class="mb-2">
                         <label for="projectName"><span class="text-danger me-1">*</span>პროექტის სახელი:</label>
                         <input type="text" class="form-control mt-2" id="projectName" name="projects_name" required>
@@ -46,11 +46,11 @@
                     </div>
                     <div class="form-group">
                         <label for="image">Image</label>
-                        <input type="file" class="form-control-file" name="images" accept="image/jpeg, image/png, image/jpg">
+                        <input type="file" class="form-control-file" name="images" accept="image/jpeg, image/png, image/jpg" multiple>
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
-                        <button type="submit" class="btn btn-primary me-2" onclick="createProjectForm()">პროექტის დამატება</button>
+                        <button type="submit" class="btn btn-primary me-2">პროექტის დამატება</button>
                     </div>
                 </form>
             </div>
