--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -44,9 +44,9 @@
                         <label for="projLocation"><span class="text-danger me-1">*</span>პროექტის მდებარეობა:</label>
                         <input type="text" class="form-control mt-2" id="projLocation" name="proj_location" required>
                     </div>
-                    <div class="form-group">
-                        <label for="image">Image</label>
-                        <input type="file" class="form-control-file" name="images" accept="image/jpeg, image/png, image/jpg" multiple>
+                    <div class="mb-3">
+                        <label for="images" class="form-label">პროექტის სურათები:</label>
+                        <input type="file" class="form-control" id="images" name="images" accept="image/jpeg, image/png, image/jpg" multiple>
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
