--- a/src/templates/geophysical/create_geophysical.html
+++ b/src/templates/geophysical/create_geophysical.html
@@ -11,10 +11,10 @@
     
             <!-- Modal body -->
             <div class="modal-body">
-                <form class="row mt-2" id="addGeophysicalForm" action="/" method="POST">
+                <form class="row mt-2" id="addGeophysicalForm" enctype="multipart/form-data" onsubmit="createGeophysicalForm(event)">
                     <div class="mb-3">
                         <label for="vs30" class="form-label"><span class="text-danger me-1">*</span>გასაშუალებული VS30:</label>
-                        <input type="number" step="any" class="form-control" id="vs30" name="vs30" required>
+                        <input type="number" class="form-control" id="vs30" name="vs30" required>
                     </div>
                     <div class="mb-3">
                         <label for="groundCategoryGeo" class="form-label"><span class="text-danger me-1">*</span>გრუნტის კატეგორია ქართული ნორმებით:</label>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="archivalMaterial" class="form-label">საარქივო ფაილი:</label>
-                        <input type="file" class="form-control" id="archivalMaterial" name="archival_material" accept=".xlsx,.pdf">
+                        <input type="file" class="form-control" id="archivalMaterial" name="archival_material" accept=".pdf">
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
