--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -6,9 +6,11 @@
 
 {% block body %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysic.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicSeismic.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicLogging.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicMap.js') }}" defer></script>
     <div id="geophysicalId" data-geophysical-id="{{ geophysical_id }}"></div>
-    <div id="projectId" data-project-id=""></div>
+    <div id="projectId" data-project-id="{{ project_id }}"></div>
     <div class="filterMapDiv">
         {% include "filter_geophysical.html" %}
 
