--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -102,6 +102,9 @@
     <!-- The CreateGeophysicalModal -->
     {% include "create_geophysical.html" %}
 
+    <!-- The EditGeophysicalModal -->
+    {% include "edit_geophysical.html" %}
+
     <!-- for Geological -->
     <div id="geologicalTableContainer" class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
@@ -116,6 +119,7 @@
                     <th>ლაბორატორიული ტესტი</th>
                     <th>წერტილების რაოდენობა</th>
                     <th>საარქივო ფაილი</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -142,6 +146,7 @@
                     <th>ელექტრული წერტილების რაოდენობა</th>
                     <th>გეორადარი</th>
                     <th>საარქივო ფაილი</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                 </tr>
