--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysic.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicSeismic.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicLogging.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicMap.js') }}" defer></script>
@@ -21,10 +20,13 @@
         </div>
     </div>
 
+    <!-- The CreateGeophysicalModal -->
+    {% include "geophysicSeismic.html" %}
+
     <div class="table-responsive-xxl table-bordered text-center mt-2" style="font-size: small;">
         <table class="table align-middle rounded-2 border-muted mb-0 bg-white">
             <td>
-                <a class="btn btn-sm btn-warning" style="font-size: x-small;" href="#">სეისმური პროფილის დამატება</a>
+                <a class="btn btn-sm btn-warning" style="font-size: x-small;" onclick="openGeophysicSeismicModal()">სეისმური პროფილის დამატება</a>
             </td>
             <td>
                 <a class="btn btn-sm btn-success" style="font-size: x-small;" href="#">გეოფიზიკური კაროტაჟის დამატება</a>
@@ -39,7 +41,7 @@
     </div>
 
     <!-- for Seismic profile -->
-    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <div id="geophysicSeismicTableContainer" class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-warning">
                 <tr>
@@ -47,8 +49,8 @@
                     <th>გრძედი (y)</th>
                     <th>პროფილის სიგრძე</th>
                     <th>VS30</th>
-                    <th>გრუნტის კატეგორია ქართული ნორმებით</th>
-                    <th>გრუნტის კატეგორია საერთაშორისო ნორმებით</th>
+                    <th>გრუნტის კატეგორია (Geo):</th>
+                    <th>გრუნტის კატეგორია (Euro):</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
                     <th>მოწოდებული მასალები(PDF)</th>
@@ -56,14 +58,14 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="GeophysSeismicTable">
+            <tbody id="geophysicSeismicTable">
                 <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
     </div>
 
     <!-- for Geophysical logging -->
-    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <div id="geophysicLoggingTableContainer" class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-success">
                 <tr>
@@ -76,7 +78,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="geophysic_loggingTableBody">
+            <tbody id="geophysicLoggingTable">
                 <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
