--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -86,7 +86,7 @@
 
 
     <!-- for Geophysical electrical -->
-    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <!-- <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-primary">
                 <tr>
@@ -117,10 +117,10 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 
     <!-- for Geophysical georadar -->
-    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <!-- <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-secondary">
                 <tr>
@@ -151,7 +151,7 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 
     <!-- for Project Data -->
     <script>
