--- a/src/templates/geophysical/geophysicSeismic.html
+++ b/src/templates/geophysical/geophysicSeismic.html
@@ -14,40 +14,40 @@
                 <form class="row mt-2" id="GeophysicSeismicForm" enctype="multipart/form-data">
                     <input type="hidden" id="geophysicSeismicId" name="id">
                     <div class="col">
-                        <label for="longitude" class="form-label"><span class="text-danger me-1">*</span>განედი (x):</label>
-                        <input type="number" step="any" class="form-control" id="longitude" name="longitude" required>
+                        <label for="seismic_longitude" class="form-label"><span class="text-danger me-1">*</span>განედი (x):</label>
+                        <input type="number" step="any" class="form-control" id="seismic_longitude" name="longitude" required>
                     </div>
                     <div class="col">
-                        <label for="latitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (y):</label>
-                        <input type="number" step="any" class="form-control" id="latitude" name="latitude" required>
+                        <label for="seismic_latitude" class="form-label"><span class="text-danger me-1">*</span>გრძედი (y):</label>
+                        <input type="number" step="any" class="form-control" id="seismic_latitude" name="latitude" required>
                     </div>
                     <div class="mb-3">
-                        <label for="profile_length" class="form-label"><span class="text-danger me-1">*</span>პროფილის სიგრძე:</label>
-                        <input type="number" step="any" class="form-control" id="profile_length" name="profile_length" required>
+                        <label for="seismic_profile_length" class="form-label"><span class="text-danger me-1">*</span>პროფილის სიგრძე:</label>
+                        <input type="number" step="any" class="form-control" id="seismic_profile_length" name="profile_length" required>
                     </div>
                     <div class="mb-3">
-                        <label for="vs30" class="form-label"><span class="text-danger me-1">*</span>VS30:</label>
-                        <input type="number" class="form-control" id="vs30" name="vs30" required>
+                        <label for="seismic_vs30" class="form-label"><span class="text-danger me-1">*</span>VS30:</label>
+                        <input type="number" class="form-control" id="seismic_vs30" name="vs30" required>
                     </div>
                     <div class="col">
-                        <label for="ground_category_geo" class="form-label"><span class="text-danger me-1">*</span>გრუნტის კატეგორია (Geo):</label>
-                        <input type="text" class="form-control" id="ground_category_geo" name="ground_category_geo" required>
+                        <label for="seismic_ground_category_geo" class="form-label"><span class="text-danger me-1">*</span>გრუნტის კატეგორია (Geo):</label>
+                        <input type="text" class="form-control" id="seismic_ground_category_geo" name="ground_category_geo" required>
                     </div>
                     <div class="col">
-                        <label for="ground_category_euro" class="form-label"><span class="text-danger me-1">*</span>გრუნტის კატეგორია (Euro):</label>
-                        <input type="text" class="form-control" id="ground_category_euro" name="ground_category_euro" required>
+                        <label for="seismic_ground_category_euro" class="form-label"><span class="text-danger me-1">*</span>გრუნტის კატეგორია (Euro):</label>
+                        <input type="text" class="form-control" id="seismic_ground_category_euro" name="ground_category_euro" required>
                     </div>
                     <div class="mb-3">
-                        <label for="archival_img" class="form-label">საარქივო Image:</label>
-                        <input type="file" class="form-control" id="archival_img" name="archival_img" accept="image/jpeg, image/png, image/jpg">
+                        <label for="seismic_archival_img" class="form-label">საარქივო Image:</label>
+                        <input type="file" class="form-control" id="seismic_archival_img" name="archival_img" accept="image/jpeg, image/png, image/jpg">
                     </div>
                     <div class="mb-3">
-                        <label for="archival_excel" class="form-label">საარქივო Excel:</label>
-                        <input type="file" class="form-control" id="archival_excel" name="archival_excel" accept=".xls, .xlsx">
+                        <label for="seismic_archival_excel" class="form-label">საარქივო Excel:</label>
+                        <input type="file" class="form-control" id="seismic_archival_excel" name="archival_excel" accept=".xls, .xlsx">
                     </div>
                     <div class="mb-3">
-                        <label for="archival_pdf" class="form-label">საარქივო PDF:</label>
-                        <input type="file" class="form-control" id="archival_pdf" name="archival_pdf" accept=".pdf">
+                        <label for="seismic_archival_pdf" class="form-label">საარქივო PDF:</label>
+                        <input type="file" class="form-control" id="seismic_archival_pdf" name="archival_pdf" accept=".pdf">
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center m-2">
