--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -7,6 +7,8 @@
 {% block body %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicSeismic.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicLogging.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicElectrical.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicGeoradar.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical/geophysicMap.js') }}" defer></script>
     <div id="geophysicalId" data-geophysical-id="{{ geophysical_id }}"></div>
     <div id="projectId" data-project-id="{{ project_id }}"></div>
@@ -90,7 +92,7 @@
 
 
     <!-- for Geophysical electrical -->
-    <!-- <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <div id="geophysicElectricTableContainer" class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-primary">
                 <tr>
@@ -99,32 +101,19 @@
                     <th>პროფილის სიგრძე</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
+                    <th>საარქივო PDF</th>
                     <th></th>
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="geophysic_electricTableBody">
-                <tr>
-                    <td>41.1234</td>
-                    <td>42.549</td>
-                    <td>10</td>
-                    <td>test.png</td>
-                    <td>test.xlsx</td>
-                    <td>
-                        <a class="btn btn-info" href="#">Edit</a>
-                    </td>
-                    <td>
-                        <form action="#" method="POST" style="display:inline;">
-                            <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this station?');">Delete</button>
-                        </form>
-                    </td>
-                </tr>
+            <tbody id="geophysicElectricTable">
+                <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
-    </div> -->
+    </div>
 
     <!-- for Geophysical georadar -->
-    <!-- <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
+    <div id="geophysicGeoradarTableContainer" class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-secondary">
                 <tr>
@@ -137,25 +126,11 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="geophysic_georadarTableBody">
-                <tr>
-                    <td>41.1234</td>
-                    <td>42.549</td>
-                    <td>10</td>
-                    <td>test.png</td>
-                    <td>test.xlsx</td>
-                    <td>
-                        <a class="btn btn-info" href="#">Edit</a>
-                    </td>
-                    <td>
-                        <form action="#" method="POST" style="display:inline;">
-                            <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this station?');">Delete</button>
-                        </form>
-                    </td>
-                </tr>
+            <tbody id="geophysicGeoradarTable">
+                <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
-    </div> -->
+    </div>
 
     <!-- for Project Data -->
     <script>
