--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -31,6 +31,9 @@
     <!-- The Create GeophysicElectricalModal -->
     {% include "geophysicElectrical.html" %}
 
+    <!-- The Create GeophysicElectricalModal -->
+    {% include "geophysicGeoradar.html" %}
+
     <div class="table-responsive-xxl table-bordered text-center mt-2" style="font-size: small;">
         <table class="table align-middle rounded-2 border-muted mb-0 bg-white">
             <td>
@@ -43,7 +46,7 @@
                 <a class="btn btn-sm btn-primary" style="font-size: x-small;" onclick="openGeophysicElectricalModal()">ელექტრული პროფილის დამატება</a>
             </td>
             <td>
-                <a class="btn btn-sm btn-secondary" style="font-size: x-small;" href="#">გეორადარის დამატება</a>
+                <a class="btn btn-sm btn-secondary" style="font-size: x-small;" onclick="openGeophysicGeoradarModal()">გეორადარის დამატება</a>
             </td>
         </table>
     </div>
@@ -125,6 +128,7 @@
                     <th>პროფილის სიგრძე</th>
                     <th>საარქივო Image</th>
                     <th>საარქივო Excel</th>
+                    <th>საარქივო PDF</th>
                     <th></th>
                     <th></th>
                 </tr>
